2.0

- AMP is now "FreePBX"
- New module system allows for drop-in functionality
- Requires Asterisk 1.2.x
- Added Modules: Conferences, Time Conditions, Asterisk CLI, Online Support 
- GUI improvements
- FOP .24
- ARI 7.001
- Outbound Routes can now use an Authenticate Password File
- Queue Static Agents can have penalties applied
- Using native music on hold support - no more mpg123!!

1.10.010

- Tested with Asterisk 1.2 (beta)
- Tested with PHP 5
- Removed all the sound files from AMP archive, instead depend on asterisk-sounds
- Ability to execute a script after applying changes in the AMP interface
  (see amportal.conf in source archive)
- Allow accountcode for IAX devices (again)
- Show custom extensions in FOP
- Allow mailbox setting for device to be set manually (for shared mailboxes)
- HINT extensions are now created for both FIXED and ADHOC devices
- Display AMP version in footer
- Support for remote mysql database
- ARI upgrade adds i18n and user settings
- Remove Play Next option from voicemail options and default to
  play next when deleting or saving voicemails
- Lots'o'bug fixes

1.10.009

- Asterisk Recording Interface (ARI).  ARI is a php interface to Voicemail and monitor recordings. (written by littlejohnconsulting.com)
- Queues can now play a "welcome" message to callers upon joining.
- DID Routes re-written as Inbound Routing.  This allows for DID specific fax emails and call answering options.
- RingGroups now use strategies: Ring All (default), Hunt, Memory Hunt
- Optional separation of Devices and Users (AMPEXTENSIONS option added to amportal.conf).  Devices are endpoints (ie: phones), and can be Fixed to a user, or Adhoc.  Users are extensions, with options like voicemail.  A user can log in to Adhoc devices by dialing *11, and log-off by dialing *12.
- Custom device technology support
- HINT priorities for FIXED devices
- Interface translated to French, German, Italian, Spanish
- FOP .21