@@ -132,6 +132,8 @@ CREATE TABLE ampusers (
   PRIMARY KEY  (username)
 ) ;
 
+INSERT INTO ampusers (username, password, extension_low, extension_high, deptname, sections) VALUES 
+ ('admin','admin','','','','*');
 
 -- 
 -- Table structure for table iax
