@@ -10,6 +10,7 @@
 - Outbound Routes can now use an Authenticate Password File
 - Queue Static Agents can have penalties applied
 - Using native music on hold support - no more mpg123!!
+- Default is to use freePBX database authentication.  New installs create a new user.
 
 1.10.010
 
